--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://KasthuriKrishna.github.io/KSP_Dashboard",
   "name": "police_management",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.2",
     "@emotion/react": "^11.11.4",
@@ -45,6 +45,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
